--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "homepage": "https://google.com",
+  "publishConfig": {
+    "mlhr6661313:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "build": "tsup"
   },
