--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "repository": "https://github.com/mlhr6661313/newnpm-test-package",
   "scripts": {
     "build": "tsup"
   },
