--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "newnpm-test-package",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Test github package",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "homepage": "https://google.com",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "mlhr6661313:registry": "https://npm.pkg.github.com"
   },
   "repository": "https://github.com/mlhr6661313/newnpm-test-package",
   "scripts": {
